// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroPortfolio renders correctly with all props 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c5 {
  margin: 0;
  padding: 0;
  position: relative;
}

.c13 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c13:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c10 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  align-items: center;
  display: flex;
  padding-bottom: 40px;
  padding-top: 2rem;
  position: relative;
}

.c2 {
  align-items: center;
  display: grid;
  gap: 0;
  grid-template-areas: "photo" "copy" "actions";
  grid-template-columns: minmax(0, 1fr);
}

.c6 {
  flex: 1;
  grid-area: copy;
  text-align: center;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: clamp(36px, 10vw, 44px);
  font-weight: 700;
  line-height: 1.05;
  margin: 0 0 16px;
  white-space: nowrap;
}

.c8 {
  color: var(--color-highlight);
  display: block;
  font-family: var(--font-inter),sans-serif;
  font-size: 14px;
  font-weight: 600;
  letter-spacing: 0.18em;
  line-height: 20px;
  margin-bottom: 14px;
  text-transform: uppercase;
}

.c9 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: clamp(18px, 4.8vw, 22px);
  font-weight: 500;
  line-height: 1.25;
  margin: 0 0 20px;
}

.c11 {
  font-size: 17px;
  font-weight: 400;
  line-height: 1.55;
  margin: 0 auto 26px;
  margin-inline: auto;
  max-width: 36ch;
}

.c12 {
  align-items: center;
  column-gap: 12px;
  display: grid;
  grid-area: actions;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  justify-self: center;
  max-width: 390px;
  row-gap: 20px;
  width: 100%;
}

.c14 {
  align-items: center;
  background: var(--color-button);
  border: 2px solid transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--color-button-text);
  display: inline-flex;
  font-size: 1rem;
  font-weight: 600;
  height: 56px;
  justify-content: center;
  max-width: none;
  min-width: 0;
  padding: 0 0.75rem;
  text-align: center;
  text-decoration: none;
  transition: all 0.2s ease;
  width: 100%;
}

.c14:focus-visible {
  outline: 2px solid var(--color-headline);
  outline-offset: 3px;
}

.c16 {
  align-items: center;
  border-bottom: 1px solid var(--color-paragraph);
  color: var(--color-paragraph);
  display: inline-flex;
  font-size: 1rem;
  font-weight: 700;
  gap: 0.375rem;
  grid-column: 1/-1;
  justify-content: center;
  justify-self: center;
  margin-inline: auto;
  min-height: 44px;
  min-width: 0;
  padding-inline: 0;
  text-decoration: none;
  transition: color 0.2s ease,border-color 0.2s ease;
  width: fit-content;
}

.c16:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c15 {
  align-items: center;
  border: 2px solid var(--color-highlight);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--color-highlight);
  display: inline-flex;
  font-size: 1rem;
  font-weight: 600;
  height: 56px;
  justify-content: center;
  max-width: none;
  min-width: 0;
  padding: 0 0.75rem;
  text-align: center;
  text-decoration: none;
  transition: all 0.2s ease;
  width: 100%;
}

.c15:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c3 {
  background: var(--color-highlight);
  border-radius: 100%;
  flex-shrink: 0;
  grid-area: photo;
  height: clamp(210px, 56vw, 240px);
  justify-self: center;
  margin-bottom: 28px;
  padding: 2px;
  width: clamp(210px, 56vw, 240px);
}

.c4 {
  border-radius: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.c17 {
  bottom: 2rem;
  display: none;
  left: 50%;
  position: fixed;
  transform: translateX(-50%);
  -webkit-appearance: none;
  animation: k0 1.8s ease-in-out infinite;
  appearance: none;
  background: none;
  border: none;
  color: var(--color-highlight);
  cursor: pointer;
  opacity: 0.6;
  padding: 0.5rem;
  pointer-events: auto;
  transition: opacity 0.4s ease;
}

.c17:focus:not(:focus-visible) {
  outline: none;
}

.c17:focus-visible {
  border-radius: 100%;
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c13:hover {
    color: var(--color-tertiary);
  }
}

@media (min-width: 900px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: calc(       var(--site-header-height) + 2rem     );
  }
}

@media (min-width: 1200px) {
  .c0 {
    box-sizing: border-box;
    min-height: 100svh;
    padding-bottom: calc(       var(--site-header-height) + 2rem     );
  }
}

@media (min-width: 900px) {
  .c2 {
    align-items: center;
    column-gap: 4rem;
    grid-template-areas: "copy photo" "actions photo";
    grid-template-columns: minmax(0, 1fr) auto;
    grid-template-rows: auto auto;
    row-gap: 2rem;
    width: 100%;
  }
}

@media (min-width: 900px) {
  .c6 {
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 5rem;
    line-height: inherit;
    margin-bottom: 1rem;
    white-space: normal;
  }
}

@media (min-width: 900px) {
  .c8 {
    font-size: 0.75rem;
    letter-spacing: 0.2em;
    line-height: inherit;
    margin-bottom: 1rem;
  }
}

@media (min-width: 390px) and (max-width: 899.99px) {
  .c9 {
    white-space: nowrap;
  }
}

@media (min-width: 900px) {
  .c9 {
    font-size: 2rem;
    font-weight: 500;
    line-height: 1.2;
    margin-bottom: 2rem;
    white-space: normal;
  }
}

@media (min-width: 900px) {
  .c11 {
    font-size: 1.25rem;
    line-height: 1.6;
    margin: 0;
    max-width: 500px;
  }
}

@media (max-width: 359.98px) {
  .c12 {
    grid-template-columns: minmax(0, 285px);
  }
}

@media (min-width: 900px) {
  .c12 {
    align-items: flex-start;
    column-gap: 1rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-self: stretch;
    max-width: none;
    row-gap: 1rem;
  }
}

@media (min-width: 900px) {
  .c14 {
    height: auto;
    padding: 0.75rem 2rem;
    width: auto;
  }
}

@media (hover: hover) {
  .c14:hover {
    background: transparent;
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

@media (min-width: 1200px) {
  .c14 {
    padding: 0.875rem 2rem;
  }
}

@media (hover: hover) {
  .c16:hover {
    border-color: var(--color-headline);
    color: var(--color-headline);
  }
}

@media (min-width: 900px) {
  .c16 {
    justify-self: auto;
    margin-inline: 0;
  }
}

@media (min-width: 900px) {
  .c15 {
    height: auto;
    padding: 0.75rem 2rem;
    width: auto;
  }
}

@media (hover: hover) {
  .c15:hover {
    background: var(--color-highlight);
    color: var(--color-button-text);
  }
}

@media (min-width: 1200px) {
  .c15 {
    padding: 0.875rem 2rem;
  }
}

@media (min-width: 900px) {
  .c3 {
    background: linear-gradient(       135deg,       var(--color-ring-start),       var(--color-ring-end)     );
    height: 380px;
    justify-self: end;
    margin-bottom: 0;
    padding: 3px;
    width: 380px;
  }
}

@media (min-width: 1200px) {
  .c17 {
    align-items: center;
    display: flex;
    justify-content: center;
  }
}

@media (hover: hover) {
  .c17:hover {
    opacity: 1;
  }
}

@keyframes k0 {
  0%, 100% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(6px);
  }
}

<div>
  <section
    class="c0"
    id="hero"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <figure
              class="c5"
            >
              <img
                alt="Andrea Agostini"
                fetchpriority="high"
                height="800"
                sizes="(max-width: 767px) 56vw, (max-width: 1199px) 148px, 380px"
                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop&f=face"
                style="max-width: 100%; height: auto; display: block; object-fit: cover;"
                width="800"
              />
            </figure>
          </div>
        </div>
        <div
          class="c6"
        >
          <h1
            class="c7"
          >
            <span
              class="c8"
            >
              Hi, I'm
            </span>
            Andrea Agostini
          </h1>
          <p
            class="c9"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c10 c11"
          >
            Building headless ecommerce and design systems with Next.js, React, TypeScript and Shopify. Based in Bangkok, fully remote.
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            class="c13 c14"
            href="#projects"
          >
            View Projects
          </a>
          <a
            class="c13 c15"
            href="mailto:a.agostini92@gmail.com"
          >
            Get in touch
          </a>
          <a
            aria-label="Download CV"
            class="c16"
            href="https://assets.ctfassets.net/placeholder/cv.pdf"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              aria-hidden="true"
            >
              ↓
            </span>
            <span>
              Download CV
            </span>
          </a>
        </div>
      </div>
    </section>
    <button
      aria-label="Scroll down"
      class="c17"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </button>
  </section>
</div>
`;

exports[`HeroPortfolio renders correctly without secondary CTA 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c5 {
  margin: 0;
  padding: 0;
  position: relative;
}

.c13 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c13:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c10 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  align-items: center;
  display: flex;
  padding-bottom: 40px;
  padding-top: 2rem;
  position: relative;
}

.c2 {
  align-items: center;
  display: grid;
  gap: 0;
  grid-template-areas: "photo" "copy" "actions";
  grid-template-columns: minmax(0, 1fr);
}

.c6 {
  flex: 1;
  grid-area: copy;
  text-align: center;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: clamp(36px, 10vw, 44px);
  font-weight: 700;
  line-height: 1.05;
  margin: 0 0 16px;
  white-space: nowrap;
}

.c8 {
  color: var(--color-highlight);
  display: block;
  font-family: var(--font-inter),sans-serif;
  font-size: 14px;
  font-weight: 600;
  letter-spacing: 0.18em;
  line-height: 20px;
  margin-bottom: 14px;
  text-transform: uppercase;
}

.c9 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: clamp(18px, 4.8vw, 22px);
  font-weight: 500;
  line-height: 1.25;
  margin: 0 0 20px;
}

.c11 {
  font-size: 17px;
  font-weight: 400;
  line-height: 1.55;
  margin: 0 auto 26px;
  margin-inline: auto;
  max-width: 36ch;
}

.c12 {
  align-items: center;
  column-gap: 12px;
  display: grid;
  grid-area: actions;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  justify-self: center;
  max-width: 390px;
  row-gap: 20px;
  width: 100%;
}

.c14 {
  align-items: center;
  background: var(--color-button);
  border: 2px solid transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--color-button-text);
  display: inline-flex;
  font-size: 1rem;
  font-weight: 600;
  height: 56px;
  justify-content: center;
  max-width: none;
  min-width: 0;
  padding: 0 0.75rem;
  text-align: center;
  text-decoration: none;
  transition: all 0.2s ease;
  width: 100%;
}

.c14:focus-visible {
  outline: 2px solid var(--color-headline);
  outline-offset: 3px;
}

.c15 {
  align-items: center;
  border-bottom: 1px solid var(--color-paragraph);
  color: var(--color-paragraph);
  display: inline-flex;
  font-size: 1rem;
  font-weight: 700;
  gap: 0.375rem;
  grid-column: 1/-1;
  justify-content: center;
  justify-self: center;
  margin-inline: auto;
  min-height: 44px;
  min-width: 0;
  padding-inline: 0;
  text-decoration: none;
  transition: color 0.2s ease,border-color 0.2s ease;
  width: fit-content;
}

.c15:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c3 {
  background: var(--color-highlight);
  border-radius: 100%;
  flex-shrink: 0;
  grid-area: photo;
  height: clamp(210px, 56vw, 240px);
  justify-self: center;
  margin-bottom: 28px;
  padding: 2px;
  width: clamp(210px, 56vw, 240px);
}

.c4 {
  border-radius: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.c16 {
  bottom: 2rem;
  display: none;
  left: 50%;
  position: fixed;
  transform: translateX(-50%);
  -webkit-appearance: none;
  animation: k0 1.8s ease-in-out infinite;
  appearance: none;
  background: none;
  border: none;
  color: var(--color-highlight);
  cursor: pointer;
  opacity: 0.6;
  padding: 0.5rem;
  pointer-events: auto;
  transition: opacity 0.4s ease;
}

.c16:focus:not(:focus-visible) {
  outline: none;
}

.c16:focus-visible {
  border-radius: 100%;
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c13:hover {
    color: var(--color-tertiary);
  }
}

@media (min-width: 900px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: calc(       var(--site-header-height) + 2rem     );
  }
}

@media (min-width: 1200px) {
  .c0 {
    box-sizing: border-box;
    min-height: 100svh;
    padding-bottom: calc(       var(--site-header-height) + 2rem     );
  }
}

@media (min-width: 900px) {
  .c2 {
    align-items: center;
    column-gap: 4rem;
    grid-template-areas: "copy photo" "actions photo";
    grid-template-columns: minmax(0, 1fr) auto;
    grid-template-rows: auto auto;
    row-gap: 2rem;
    width: 100%;
  }
}

@media (min-width: 900px) {
  .c6 {
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 5rem;
    line-height: inherit;
    margin-bottom: 1rem;
    white-space: normal;
  }
}

@media (min-width: 900px) {
  .c8 {
    font-size: 0.75rem;
    letter-spacing: 0.2em;
    line-height: inherit;
    margin-bottom: 1rem;
  }
}

@media (min-width: 390px) and (max-width: 899.99px) {
  .c9 {
    white-space: nowrap;
  }
}

@media (min-width: 900px) {
  .c9 {
    font-size: 2rem;
    font-weight: 500;
    line-height: 1.2;
    margin-bottom: 2rem;
    white-space: normal;
  }
}

@media (min-width: 900px) {
  .c11 {
    font-size: 1.25rem;
    line-height: 1.6;
    margin: 0;
    max-width: 500px;
  }
}

@media (max-width: 359.98px) {
  .c12 {
    grid-template-columns: minmax(0, 285px);
  }
}

@media (min-width: 900px) {
  .c12 {
    align-items: flex-start;
    column-gap: 1rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-self: stretch;
    max-width: none;
    row-gap: 1rem;
  }
}

@media (min-width: 900px) {
  .c14 {
    height: auto;
    padding: 0.75rem 2rem;
    width: auto;
  }
}

@media (hover: hover) {
  .c14:hover {
    background: transparent;
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

@media (min-width: 1200px) {
  .c14 {
    padding: 0.875rem 2rem;
  }
}

@media (hover: hover) {
  .c15:hover {
    border-color: var(--color-headline);
    color: var(--color-headline);
  }
}

@media (min-width: 900px) {
  .c15 {
    justify-self: auto;
    margin-inline: 0;
  }
}

@media (min-width: 900px) {
  .c3 {
    background: linear-gradient(       135deg,       var(--color-ring-start),       var(--color-ring-end)     );
    height: 380px;
    justify-self: end;
    margin-bottom: 0;
    padding: 3px;
    width: 380px;
  }
}

@media (min-width: 1200px) {
  .c16 {
    align-items: center;
    display: flex;
    justify-content: center;
  }
}

@media (hover: hover) {
  .c16:hover {
    opacity: 1;
  }
}

@keyframes k0 {
  0%, 100% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(6px);
  }
}

<div>
  <section
    class="c0"
    id="hero"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <figure
              class="c5"
            >
              <img
                alt="Andrea Agostini"
                fetchpriority="high"
                height="800"
                sizes="(max-width: 767px) 56vw, (max-width: 1199px) 148px, 380px"
                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop&f=face"
                style="max-width: 100%; height: auto; display: block; object-fit: cover;"
                width="800"
              />
            </figure>
          </div>
        </div>
        <div
          class="c6"
        >
          <h1
            class="c7"
          >
            <span
              class="c8"
            >
              Hi, I'm
            </span>
            Andrea Agostini
          </h1>
          <p
            class="c9"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c10 c11"
          >
            Building headless ecommerce and design systems with Next.js, React, TypeScript and Shopify. Based in Bangkok, fully remote.
          </p>
        </div>
        <div
          class="c12"
        >
          <a
            class="c13 c14"
            href="#projects"
          >
            View Projects
          </a>
          <a
            aria-label="Download CV"
            class="c15"
            href="https://assets.ctfassets.net/placeholder/cv.pdf"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              aria-hidden="true"
            >
              ↓
            </span>
            <span>
              Download CV
            </span>
          </a>
        </div>
      </div>
    </section>
    <button
      aria-label="Scroll down"
      class="c16"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </button>
  </section>
</div>
`;
